# SnapShot

./: .gitignore  LICENSE  MobileDevPlan.md  PLAN.md  README.md  WEBPLAN.md
.github/workflows/: release.yml
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/src/: lib.rs  main.rs
backend/src/capture/: mod.rs
backend/src/clipboard/: mod.rs
backend/src/extraction/: mod.rs
backend/src/hotkey/: mod.rs
desktop/: README.md
desktop/src/: App.xaml.cs  CaptureOverlay.xaml  CaptureOverlay.xaml.cs  RefinementWindow.xaml
docs/: architecture.md  development.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
mobile/: app.json  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
mobile/src/: declarations.d.ts  global.css
src/: App.xaml  App.xaml.cs  CaptureOverlay.xaml  CaptureOverlay.xaml.cs  RefinementWindow.xaml  RefinementWindow.xaml.cs  SnapShot.csproj
src/Services/: BackgroundRemovalService.cs  HotkeyService.cs  ScreenCaptureService.cs
steps/: WEB_DEVELOPMENT_STEPS.md  WEB_MOBILE_POLISH_STEPS.md  phase-1-initialization.md  phase-2-design-system.md  phase-3-components-and-features.md  phase-4-ci-cd-automation.md  phase-5-deployment-and-qa.md
stepsmobile/: MOBILE_DEVELOPMENT_STEPS.md  phase-1-mobile-init.md  phase-2-mobile-design.md  phase-3-mobile-capture.md  phase-4-mobile-ai.md  phase-5-mobile-refinement.md  phase-6-mobile-output-qa.md
website/: index.html  package-lock.json  package.json  vercel.json
website/src/: App.jsx  index.css
(+53 files in other folders)
