[package]
name = "snapshot"
version = "0.1.0"
description = "Screen-to-Object Capture Tool"
authors = ["kuroi17"]
edition = "2021"

[lib]
name = "snapshot_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = "0.22"
screenshots = "0.3"
